/*
	本文件代码由代码生成工具自动生成，请不要手动修改
*/
syntax = "proto3";
option csharp_namespace = "Tripod.Service.Archive";

message BranchDTO {
	string Id = 1;
	string ParentId = 2;
	string ParentName = 3;
	string Name = 4;
	string ShortName = 5;
	int32 Type = 6;
	string ContactsName = 7;
	string ContactsMobile = 8;
	string ContactsTel = 9;
	string ContactsEmail = 10;
	string Address = 11;
	int32 GiftStoreId = 12;
	int32 ReturnStoreId = 13;
	int32 PurchaseStoreId = 14;
	string Memo = 15;
	int64 CreateOperId = 16;
	string CreateOperName = 17;
	string CreateTime = 18;
	int64 LastUpdateOperId = 19;
	string LastUpdateOperName = 20;
	string LastUpdateTime = 21;
}

message BranchGroupDTO {
	int32 Id = 1;
	string Name = 2;
}

message BranchGroupBranchDTO {
	int32 Id = 1;
	int32 BranchGroupId = 2;
	string BranchId = 3;
}

message ItemDTO {
	string Id = 1;
	string Barcode = 2;
	string Name = 3;
	string ShortName = 4;
	string ItemClsId = 5;
	string ItemClsName = 6;
	string ItemBrandId = 7;
	string ItemBrandName = 8;
	string ItemDepartmentId = 9;
	string ItemDepartmentName = 10;
	int32 ItemUnitId = 11;
	string ItemUnitName = 12;
	string PrimarySupplierId = 13;
	string PrimarySupplierName = 14;
	int32 Status = 15;
	int32 IsFresh = 16;
	string RetailPrice = 17;
	string PurchasePrice = 18;
	string SalesPrice = 19;
	string DeliveryPrice = 20;
	string ReferProfitRate = 21;
	string Size = 22;
	int32 TransportMode = 23;
	int32 QualityDays = 24;
	int32 WarningDays = 25;
	int32 LeastDeliveryQty = 26;
	string ProductionPlace = 27;
	string PurchaseTaxRate = 28;
	string SalesTaxRate = 29;
	string Memo = 30;
	int64 CreateOperId = 31;
	string CreateOperName = 32;
	string CreateTime = 33;
	int64 LastUpdateOperId = 34;
	string LastUpdateOperName = 35;
	string LastUpdateTime = 36;
}

message ItemBarcodeDTO {
	int32 Id = 1;
	string ItemId = 2;
	string Barcode = 3;
	string Memo = 4;
}

message ItemBrandDTO {
	string Id = 1;
	string Name = 2;
}

message ItemClsDTO {
	string Id = 1;
	string ParentId = 2;
	string Name = 3;
}

message ItemDeliveryPriceDTO {
	int32 Id = 1;
	string ItemId = 2;
	string BranchId = 3;
	string DeliveryPrice = 4;
	string Memo = 5;
}

message ItemDepartmentDTO {
	int64 Id = 1;
	string Name = 2;
}

message ItemPackageDTO {
	int32 Id = 1;
	string ItemId = 2;
	string Barcode = 3;
	int32 ItemUnitId = 4;
	string ItemUnitName = 5;
	int32 FactorQty = 6;
	string RetailPrice = 7;
	string SalesPrice = 8;
	int32 IsDefaultPurchaseUnit = 9;
	int32 IsDefaultDeliveryUnit = 10;
	string Memo = 11;
}

message ItemPurchasePriceDTO {
	int32 Id = 1;
	string ItemId = 2;
	string Barcode = 3;
	string BranchId = 4;
	string SupplierId = 5;
	int32 IsPrimary = 6;
	int32 ItemUnitId = 7;
	string ItemUnitName = 8;
	int32 FactorQty = 9;
	string PurchasePrice = 10;
	string Memo = 11;
}

message ItemSellingPriceDTO {
	int32 Id = 1;
	string ItemId = 2;
	string Barcode = 3;
	string BranchId = 4;
	int32 ItemUnitId = 5;
	string ItemUnitName = 6;
	int32 FactorQty = 7;
	string RetailPrice = 8;
	string SalesPrice = 9;
	string Memo = 10;
}

message ItemSubDTO {
	int32 Id = 1;
	string ItemId = 2;
	string Barcode = 3;
	string Name = 4;
	string RetailPrice = 5;
	string SalesPrice = 6;
	string Memo = 7;
}

message ItemSubPriceDTO {
	int32 Id = 1;
	string ItemId = 2;
	string Barcode = 3;
	string BranchId = 4;
	string RetailPrice = 5;
	string SalesPrice = 6;
	string Memo = 7;
}

message ItemUnitDTO {
	int64 Id = 1;
	string Name = 2;
}

message StoreDTO {
	int64 Id = 1;
	string BranchId = 2;
	string Name = 3;
	int32 IsUsable = 4;
}

message SupplierDTO {
	string Id = 1;
	string Name = 2;
	string RegionId = 3;
	int32 SellWay = 4;
	int32 SettleWay = 5;
	int32 SettleDays = 6;
	string SettleDate = 7;
	int32 Status = 8;
	string ContactsName = 9;
	string ContactsMobile = 10;
	string ContactsTel = 11;
	string ContactsEmail = 12;
	string AccountBank = 13;
	string AccountNo = 14;
	string TaxRegistrationNo = 15;
	string BusinessLicenseNo = 16;
	string Memo = 17;
	int64 CreateOperId = 18;
	string CreateOperName = 19;
	string CreateTime = 20;
	int64 LastUpdateOperId = 21;
	string LastUpdateOperName = 22;
	string LastUpdateTime = 23;
}

message SupplierRegionDTO {
	int64 Id = 1;
	string Name = 2;
}

