/*
	本文件代码由代码生成工具自动生成，请不要手动修改
*/
syntax = "proto3";
option csharp_namespace = "Tripod.Service.Purchase";

message PurchaseOrderDTO {
	string SheetId = 1;
	int32 Type = 2;
	int32 ReceiveStatus = 3;
	int32 ApproveStatus = 4;
	string SupplierId = 5;
	string OrderBranchId = 6;
	string ReceiveExpireDate = 7;
	string TotalAmount = 8;
	string PurchaseOper = 9;
	string CreateOper = 10;
	string CreateTime = 11;
	string ApproveOper = 12;
	string ApproveTime = 13;
	string Memo = 14;
}

message PurchaseOrderBranchDTO {
	int64 Id = 1;
	string SheetId = 2;
	string BranchId = 3;
}

message PurchaseOrderDetailDTO {
	int64 Id = 1;
	string SheetId = 2;
	string ItemId = 3;
	string ItemBarcode = 4;
	string ItemName = 5;
	int32 GiftFlag = 6;
	string Size = 7;
	string PurchaseUnit = 8;
	string ReferPurchasePrice = 9;
	string Qty = 10;
	string PurchasePrice = 11;
	string Amount = 12;
	string TaxRate = 13;
	string TaxAmount = 14;
	string ReferStockQty = 15;
	string StockQty = 16;
	string StockUnit = 17;
	string RetailPrice = 18;
	string ReceivedQty = 19;
	string Memo = 20;
}

message PurchaseOrderDetailBranchDTO {
	int64 Id = 1;
	string SheetId = 2;
	string DetailId = 3;
	string BranchId = 4;
	string ReferStockQty = 5;
	string Qty = 6;
	string Memo = 7;
}

message PurchaseReceiveDTO {
	string SheetId = 1;
	string RefSheetId = 2;
	int32 ApproveStatus = 3;
	int32 SettleStatus = 4;
	string SupplierId = 5;
	string ReceiveBranch = 6;
	string ReceiveStoreId = 7;
	string TotalAmount = 8;
	string PurchaseOper = 9;
	string ReceiveTime = 10;
	string CreateOper = 11;
	string CreateTime = 12;
	string ApproveOper = 13;
	string ApproveTime = 14;
	string Memo = 15;
}

message PurchaseReceiveDetailDTO {
	int64 Id = 1;
	string SheetId = 2;
	string ItemId = 3;
	string ItemBarcode = 4;
	string ItemName = 5;
	string Size = 6;
	string PurchaseUnit = 7;
	string Qty = 8;
	string Price = 9;
	string Amount = 10;
	string TaxRate = 11;
	string TaxAmount = 12;
	string ReferStockQty = 13;
	string StockQty = 14;
	string StockUnit = 15;
	string ProduceDate = 16;
	string ExpireDate = 17;
	string Memo = 18;
}

message PurchaseReceiveDetailBranchDTO {
	int64 Id = 1;
	string SheetId = 2;
	string DetailId = 3;
	string BranchId = 4;
	string ReferUnreceivedQty = 5;
	string Qty = 6;
	string Memo = 7;
}

message PurchaseReturnDTO {
	string SheetId = 1;
	string RefSheetId = 2;
	int32 ApproveStatus = 3;
	string SupplierId = 4;
	string BranchId = 5;
	string StoreId = 6;
	string TotalAmount = 7;
	string CreateOper = 8;
	string CreateTime = 9;
	string ApproveOper = 10;
	string ApproveTime = 11;
	string Memo = 12;
}

message PurchaseReturnDetailDTO {
	int64 Id = 1;
	string SheetId = 2;
	string ItemId = 3;
	string ItemBarcode = 4;
	string ItemName = 5;
	string Size = 6;
	string PurchaseUnit = 7;
	string Qty = 8;
	string Price = 9;
	string Amount = 10;
	string TaxRate = 11;
	string TaxAmount = 12;
	string ReferStockQty = 13;
	string StockQty = 14;
	string StockUnit = 15;
	string Memo = 16;
}

